# Personal-Data-App

./: README.md  package-lock.json
Gestion-Datos-Personales-APP/: README.md
Gestion-Datos-Personales-APP/api_registrar/app/: app.py
Personal-Data-App/: .gitignore  index.html  package-lock.json  package.json
Personal-Data-App/backend/: docker-compose.yml
Personal-Data-App/backend/agent/: Dockerfile  new.json
Personal-Data-App/backend/agent/.chainlit/: config.toml
Personal-Data-App/backend/agent/database/postgresql/: connect.py
Personal-Data-App/backend/api_consultaLog/: app.py
Personal-Data-App/backend/api_consultaUsuarios/: app.py
Personal-Data-App/backend/api_registrar/app/controlers/: persona_controller.py
Personal-Data-App/src/: App.tsx  BackButton.tsx  Borrar.tsx  Busqueda.tsx  Consulta.tsx  Crear.tsx  Details.tsx  DetalleLog.tsx  Detalles.tsx  Editar.tsx  LogType.tsx  Logs.tsx  Persona.tsx  main.tsx
Personal-Data-App/src/components/: Borrar.tsx  Consulta.tsx  Crear.tsx  Editar.tsx  Image.tsx  Logs.tsx
Personal-Data-App/src/styles/: App.css  BackButton.css  Consulta.css  Details.css  Detalles.css
Personal-Data-App/src/types/: Persona.tsx
Personal-Data-App/src/utils/: BackButton.tsx  DetalleLog.tsx  Detalles.tsx
agent/: .env  app.py  pyproject.toml
agent/callbacks/: langchain_callback.py
agent/database/postgresql/: connect_async.py
agent/public/: theme.json
api_actualizar/: app.py
api_borrar/: app.py
api_registrar/: requirements.txt
